--- a/app/src/main/res/layout/quote_recycler.xml
+++ b/app/src/main/res/layout/quote_recycler.xml
@@ -4,8 +4,10 @@
 
 
     <RelativeLayout
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:gravity="start">
 
         <androidx.recyclerview.widget.RecyclerView
             tools:listitem="@layout/quotescard"
@@ -13,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <com.creat.motiv.utils.Typewritter
+        <com.creat.motiv.view.custom.Typewritter
             android:id="@+id/notfound"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
