--- a/app/src/main/res/menu/mainmenu.xml
+++ b/app/src/main/res/menu/mainmenu.xml
@@ -1,21 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <!--<item
-        android:id="@+id/search"
-        android:title="pesquisar"
-        app:showAsAction="always"
-        android:icon="@drawable/ic_search_black_24dp" />-->
     <item
         app:showAsAction="always"
+        android:iconTint="@color/colorAccent"
         android:id="@+id/navigation_about"
         android:icon="@drawable/about"
         android:title="Sobre" />
 
-    <item
-        android:id="@+id/profilepic"
-        android:title="@string/username"
-        app:actionViewClass="de.hdodenhof.circleimageview.CircleImageView"
-        app:showAsAction="always" />
 
 </menu>
