--- a/app/src/main/res/menu/quotemenu.xml
+++ b/app/src/main/res/menu/quotemenu.xml
@@ -1,12 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:title="Compartilhar"
+        app:showAsAction="always"
         android:id="@+id/quoteShare"
         android:icon="@drawable/share" />
     <item
+        android:title="Copiar"
+        app:showAsAction="always"
         android:id="@+id/quoteCopy"
         android:icon="@drawable/ic_copy" />
     <item
+        android:iconTint="@color/red_500"
+        android:title="Denunciar"
+        app:showAsAction="always"
         android:id="@+id/quoteReport"
         android:icon="@drawable/ic_flag" />
+    <item
+        android:id="@+id/quoteDelete"
+        android:icon="@drawable/ic_delete_red_24dp"
+        android:iconTint="@color/red_500"
+        android:title="Remover"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/quoteEdit"
+        android:icon="@drawable/ic_delete_red_24dp"
+        android:iconTint="@color/red_500"
+        android:title="Editar"
+        app:showAsAction="always" />
 </menu>
