--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -124,6 +124,7 @@
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowBackground">@color/transparent</item>
     </style>
+
     <style name="Bottom_Dialog_No_Border">
         <item name="android:windowAnimationStyle">@style/BottomDialogAnimation</item>
         <item name="android:fontFamily">@font/lato_regular</item>
@@ -132,6 +133,14 @@
         <item name="android:textColor">?android:textColor</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowBackground">@color/transparent</item>
+    </style>
+
+    <style name="Full_Screen_Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
     </style>
 
 </resources>
