--- a/app/src/main/res/layout/quote_header_view.xml
+++ b/app/src/main/res/layout/quote_header_view.xml
@@ -3,14 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
+        android:padding="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
-
             android:id="@+id/title"
             style="@style/ToolbarTitle"
+            android:layout_marginStart="4dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="Publicações" />
