--- a/app/src/main/res/layout/quote_recycler.xml
+++ b/app/src/main/res/layout/quote_recycler.xml
@@ -5,7 +5,6 @@
 
     <RelativeLayout
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:gravity="start">
 
@@ -15,17 +14,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <com.creat.motiv.view.custom.Typewritter
-            android:id="@+id/notfound"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <com.budiyev.android.circularprogressbar.CircularProgressBar
+            android:id="@+id/loading"
             android:layout_centerInParent="true"
-            android:padding="16dp"
-            android:text="Escrevendo coisas maneiras"
-            android:textAlignment="center"
-            android:textColor="?android:textColorPrimary"
-            android:textSize="32sp"
-            android:textStyle="bold" />
+            android:layout_width="64dp"
+            android:layout_height="64dp" />
 
 
     </RelativeLayout>
