--- a/app/src/main/res/layout/user_quote_card_view.xml
+++ b/app/src/main/res/layout/user_quote_card_view.xml
@@ -22,27 +22,29 @@
         app:shimmer_highlight_color="@color/design_default_color_primary_dark">
 
         <LinearLayout
+            android:layout_height="?attr/actionBarSize"
             android:id="@+id/userContainer"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/fade_gradient"
             android:orientation="horizontal"
-            android:paddingTop="8dp">
+            android:stateListAnimator="@animator/list_animator">
 
 
             <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_height="match_parent"
                 android:id="@+id/userpic"
                 android:layout_width="60dp"
-                android:layout_height="40dp"
+                android:layout_marginStart="10dp"
                 android:transitionName="profilepic"
                 tools:src="@drawable/notfound" />
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:id="@+id/username"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
+                android:gravity="center"
                 android:fontFamily="@font/lato_bold"
-                android:padding="5dp"
                 android:text="@{userData.name}"
                 android:textColor="@color/white"
                 android:textSize="12sp"
