--- a/app/src/main/res/menu/quotemenu.xml
+++ b/app/src/main/res/menu/quotemenu.xml
@@ -12,21 +12,23 @@
         android:id="@+id/quoteCopy"
         android:icon="@drawable/ic_copy" />
     <item
+        android:id="@+id/quoteEdit"
+        android:icon="@drawable/ic_edit"
+        android:title="Editar"
+        app:showAsAction="always" />
+
+    <item
         android:iconTint="@color/red_500"
         android:title="Denunciar"
         app:showAsAction="always"
         android:id="@+id/quoteReport"
         android:icon="@drawable/ic_flag" />
+
+
     <item
         android:id="@+id/quoteDelete"
-        android:icon="@drawable/ic_delete_red_24dp"
+        android:icon="@drawable/ic_garbage"
         android:iconTint="@color/red_500"
         android:title="Remover"
-        app:showAsAction="always" />
-    <item
-        android:id="@+id/quoteEdit"
-        android:icon="@drawable/ic_delete_red_24dp"
-        android:iconTint="@color/red_500"
-        android:title="Editar"
         app:showAsAction="always" />
 </menu>
